로직이 삭제되지 않는 오류 해결

--- a/BE/settings.json
+++ b/BE/settings.json
@@ -14,7 +14,7 @@
             "order": 1,
             "name": "체력 회복 - 4회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-11-30T07:13:33.479956",
+            "updated_at": "2024-11-30T10:06:06.372259",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 /",
@@ -131,7 +131,7 @@
             "order": 2,
             "name": "체력 회복 - 1회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-11-30T07:19:46.065066",
+            "updated_at": "2024-11-30T10:06:06.378830",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "키 코드 192",
@@ -248,7 +248,7 @@
             "order": 3,
             "name": "보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-11-30T07:13:33.491653",
+            "updated_at": "2024-11-30T10:06:06.383858",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 .",
@@ -565,7 +565,7 @@
             "order": 4,
             "name": "모두 줍기",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-11-30T07:13:33.497299",
+            "updated_at": "2024-11-30T10:06:06.389534",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "오른쪽 쉬프트",
@@ -694,7 +694,7 @@
             "order": 5,
             "name": "공력증강 - 1회",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-11-30T07:13:33.504327",
+            "updated_at": "2024-11-30T10:06:06.396212",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 6",
@@ -707,14 +707,32 @@
             "items": [
                 {
                     "order": 1,
-                    "type": "logic",
-                    "display_text": "동동주 마시기 - 1회",
-                    "logic_id": "9614e85c-3ceb-423b-97ea-e17bfc0101fc",
-                    "logic_name": "동동주 마시기 - 1회",
-                    "repeat_count": 1
+                    "display_text": "키 입력: 숫자패드 6 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 6",
+                    "scan_code": 77,
+                    "virtual_key": 102,
+                    "modifiers": 0
                 },
                 {
                     "order": 2,
+                    "display_text": "키 입력: 숫자패드 6 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 6",
+                    "scan_code": 77,
+                    "virtual_key": 102,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.02초",
+                    "duration": 0.02,
+                    "order": 3
+                },
+                {
+                    "order": 4,
                     "type": "logic",
                     "display_text": "체력 회복 - 4회",
                     "logic_id": "0dfa1418-cab1-4439-ae8a-b0c971471c99",
@@ -722,18 +740,18 @@
                     "repeat_count": 1
                 },
                 {
-                    "order": 3,
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.02초",
+                    "duration": 0.02,
+                    "order": 5
+                },
+                {
+                    "order": 6,
                     "type": "logic",
                     "display_text": "동동주 마시기 - 1회",
                     "logic_id": "9614e85c-3ceb-423b-97ea-e17bfc0101fc",
                     "logic_name": "동동주 마시기 - 1회",
                     "repeat_count": 1
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.02초",
-                    "duration": 0.02,
-                    "order": 4
                 }
             ]
         },
@@ -741,7 +759,7 @@
             "order": 6,
             "name": "동동주 마시기 - 1회",
             "created_at": "2024-11-30T07:08:49.271692",
-            "updated_at": "2024-11-30T07:26:30.767635",
+            "updated_at": "2024-11-30T10:06:06.401251",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -816,7 +834,7 @@
             "order": 7,
             "name": "첨 공격 - 1회",
             "created_at": "2024-11-30T07:03:44.632368",
-            "updated_at": "2024-11-30T07:26:07.417828",
+            "updated_at": "2024-11-30T10:06:06.406795",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -867,7 +885,7 @@
             "order": 8,
             "name": "자동사냥 - 첨 마법",
             "created_at": "2024-11-30T07:13:20.157256",
-            "updated_at": "2024-11-30T07:26:19.488698",
+            "updated_at": "2024-11-30T10:09:03.313685",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 -",
@@ -881,17 +899,17 @@
                 {
                     "order": 1,
                     "type": "logic",
-                    "display_text": "공력증강 - 1회",
-                    "logic_id": "e058193f-99b3-434c-be33-bb6222114c09",
-                    "logic_name": "공력증강 - 1회",
+                    "display_text": "보호 무장 힘",
+                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
+                    "logic_name": "보호 무장 힘",
                     "repeat_count": 1
                 },
                 {
                     "order": 2,
                     "type": "logic",
-                    "display_text": "보호 무장 힘",
-                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
-                    "logic_name": "보호 무장 힘",
+                    "display_text": "공력증강 - 1회",
+                    "logic_id": "e058193f-99b3-434c-be33-bb6222114c09",
+                    "logic_name": "공력증강 - 1회",
                     "repeat_count": 1
                 },
                 {
@@ -912,6 +930,38 @@
                 },
                 {
                     "order": 5,
+                    "type": "logic",
+                    "display_text": "첨 공격 - 1회",
+                    "logic_id": "f7c64ad9-fb3a-44bc-a1f1-6c92293e5ba7",
+                    "logic_name": "첨 공격 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 6,
+                    "type": "logic",
+                    "display_text": "공력증강 - 1회",
+                    "logic_id": "e058193f-99b3-434c-be33-bb6222114c09",
+                    "logic_name": "공력증강 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 7,
+                    "type": "logic",
+                    "display_text": "공력증강 - 1회",
+                    "logic_id": "e058193f-99b3-434c-be33-bb6222114c09",
+                    "logic_name": "공력증강 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 8,
+                    "type": "logic",
+                    "display_text": "첨 공격 - 1회",
+                    "logic_id": "f7c64ad9-fb3a-44bc-a1f1-6c92293e5ba7",
+                    "logic_name": "첨 공격 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 9,
                     "type": "logic",
                     "display_text": "첨 공격 - 1회",
                     "logic_id": "f7c64ad9-fb3a-44bc-a1f1-6c92293e5ba7",
